crates/artemis_app/src/snapshots/artemis_app__operation__tests__shell_output_no_truncation.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="echo hello"
  shell="/bin/bash"
  exit_code="0"
>
<stdout
  total_lines="2"
><![CDATA[hello
world]]>
</stdout>
</shell_output>
