crates/artemis_app/src/snapshots/artemis_app__operation__tests__shell_output_single_line_each.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="simple_command"
  shell="/bin/bash"
  exit_code="0"
>
<stdout
  total_lines="1"
><![CDATA[single stdout line]]>
</stdout>
<stderr
  total_lines="1"
><![CDATA[single stderr line]]>
</stderr>
</shell_output>
